	* Export 'Fun' type, 'apply', 'Function(..)' and 'functionMap' from
	  'Test.QuickCheck'
	* 'Test.QuickCheck.Function', 'Test.QuickCheck.Poly', and
	  'Test.QuickCheck.Monadic' are now Safe modules.
	* 'Test.QuickCheck.Monadic' functions no longer ignore returned
	  `a`s, and use `()` instead.
	* Add `maxShrinks` parameter to `Args`. Number of shrinks to try
	  before giving up shrinking.

QuickCheck 2.9.2 (released 2016-09-15)
	* Fix a bug where some properties were only being tested once
	* Make shrinking of floating-point values less aggressive
	* Add function chooseAny :: Random a => Gen a

QuickCheck 2.9.1 (released 2016-07-11)
	* 'again' was only used in forAllShrink, not forAll

QuickCheck 2.9 (released 2016-07-10)
	* Arbitrary, CoArbitrary and Function instances for more types
	* Generics for automatic Function instances
	* A new combinator "again" which undoes the effect of "once"
	* Remove "exhaustive" from Testable typeclass;
	  instead, combinators which are nonexhaustive (such as forAll)
	  call "again", which should be more robust

	* Drop support for GHC 6.x

	* Fixed bugs:
		* arbitrarySizedBoundedIntegral wasn't generating huge integers
		* verboseCheck failed with Test.QuickCheck.Function
		* label had a space leak

QuickCheck 2.8.2 (released 2016-01-15)
	* GHC 8 support
	* Add Arbitrary and CoArbitrary instances for types in
	  containers package
	* Improve speed of shuffle combinator
	* Only print to stderr if it's a terminal.
	* Small changes: slightly improve documentation,
	  remove redundant constraints from some functions' types,
	  small improvements to Test.QuickCheck.All.

QuickCheck 2.8.1 (released 2015-04-03)
	* Fix bug where exceptions thrown printing counterexamples weren't
	  being caught when terminal output was disabled
	* Don't export Test.QuickCheck.Property.result

QuickCheck 2.8 (released 2015-03-18)
	* New features:
		* Support for GHC 7.10
		* Arbitrary instance for Natural
		* New generators shuffle and sublistOf