@@ -1,5 +1,5 @@
 Name: QuickCheck
-Version: 2.9.2
+Version: 2.10
 Cabal-Version: >= 1.8
 Build-type: Simple
 License: BSD3
@@ -61,15 +61,8 @@ flag templateHaskell
   Description: Build Test.QuickCheck.All, which uses Template Haskell.
   Default: True
 
-flag light
-  Description:
-    Build with as few dependencies as possible.
-    Some instances will be missing, but build time will be reduced.
-    Can be useful on e.g. Travis.
-  Default: False
-
 library
-  Build-depends: base >=4.3 && <5, random, containers, array
+  Build-depends: base >=4.3 && <5, random, containers
 
   -- Modules that are always built.
   Exposed-Modules:
@@ -121,29 +114,8 @@ library
   else
     cpp-options: -DNO_TF_RANDOM
 
-  if impl(ghc) && (impl(ghc >= 7.8) || !flag(light))
-    -- 'Data.Proxy' is available in base only since GHC 7.8 / base-4.7
-    if impl(ghc < 7.8)
-      build-depends: tagged>=0.8.5
-  else
-      cpp-options: -DNO_PROXY
-
   if !impl(ghc >= 7.6)
       cpp-options: -DNO_POLYKINDS
-
-  if impl(ghc) && (impl(ghc >= 7.10) || !flag(light))
-    if impl(ghc < 7.10)
-      -- `Numeric.Natural` is available in base only since GHC 7.10 / base 4.8
-      build-depends: nats>=1
-  else
-      cpp-options: -DNO_NATURALS
-
-  if impl(ghc) && (impl(ghc >= 8.0) || !flag(light))
-    -- 'Data.List.NonEmpty' is available in base only since GHC 8.0 / base 4.9
-    if impl(ghc < 8.0)
-      build-depends: semigroups >=0.9
-  else
-      cpp-options: -DNO_NONEMPTY
 
   -- Switch off most optional features on non-GHC systems.
   if !impl(ghc)
