@@ -10,6 +10,7 @@ QuickCheck HEAD
 	  `a`s, and use `()` instead.
 	* Add `maxShrinks` parameter to `Args`. Number of shrinks to try
 	  before giving up shrinking.
+	* Move instances from `nats`, `semigroups` to `quickcheck-instances`
 
 QuickCheck 2.9.2 (released 2016-09-15)
 	* Fix a bug where some properties were only being tested once
